--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     </div>
 </div>
 <div class="floor dev-solution">
-    <div class="dev-aboutcon">
+    <div class="dev-solucon-out">
         <div class="dev-bigtitle">Solution</div>
-        <div class="dev-blogcon" id="scrollbar1">
+        <div class="dev-solucon" id="scrollbar1">
             <div class="scrollbar">
                 <div class="track">
                     <div class="thumb">
@@ -130,107 +130,109 @@
             </div>
             <div class="viewport">
                 <div class="overview">
-                    <div class="dev-bloglist">
-                        <div class="dev-blogimg">
-                            <div class="dev-blogimgcon"><img src="images/blog1.png"/></div>
+                    <div class="dev-solulist">
+                        <div class="dev-soluimg">
+                            <div class="dev-soluimgcon"><img src="images/blog1.png" /></div>
                         </div>
-                        <div class="dev-bloglistcon">
-                            <div class="dev-blogtitle">Balenciaga selects Fantasy Interactive as creative digital
+                        <div class="dev-solulistcon">
+                            <div class="dev-solutitle">
+                                Balenciaga selects Fantasy Interactive as creative digital
                                 partner
                             </div>
-                            <div class="dev-blogsummary">
+                            <div class="dev-solusummary">
                                 Balenciaga has engaged Fantasy Interactive to provide a variety of digital services. We
                                 are delighted to acquire a client whom shares
                                 similar philosophies with our company.
                             </div>
-                            <div class="dev-blogoperate">
+                            <div class="dev-soluoperate">
                                 <span class="rili">1nd September 2014</span>
                                 <span class="talk">10</span>
                             </div>
                         </div>
                     </div>
-                    <div class="dev-bloglist">
-                        <div class="dev-blogimg">
-                            <div class="dev-blogimgcon"><img src="images/blog2.png"/></div>
+                    <div class="dev-solulist">
+                        <div class="dev-soluimg">
+                            <div class="dev-soluimgcon"><img src="images/blog2.png" /></div>
                         </div>
-                        <div class="dev-bloglistcon">
-                            <div class="dev-blogtitle">Fantasy behind the new Si.com</div>
-                            <div class="dev-blogsummary">
+                        <div class="dev-solulistcon">
+                            <div class="dev-solutitle">Fantasy behind the new Si.com</div>
+                            <div class="dev-solusummary">
                                 Balenciaga has engaged Fantasy Interactive to provide a variety of digital services. We
                                 are delighted to acquire a client whom shares
                                 similar philosophies with our company.
                             </div>
-                            <div class="dev-blogoperate">
+                            <div class="dev-soluoperate">
                                 <span class="rili">1nd September 2014</span>
                                 <span class="talk">10</span>
                             </div>
                         </div>
                     </div>
-                    <div class="dev-bloglist">
-                        <div class="dev-blogimg">
-                            <div class="dev-blogimgcon"><img src="images/blog3.png"/></div>
+                    <div class="dev-solulist">
+                        <div class="dev-soluimg">
+                            <div class="dev-soluimgcon"><img src="images/blog3.png" /></div>
                         </div>
-                        <div class="dev-bloglistcon">
-                            <div class="dev-blogtitle">How red dot and Nickelodeon Brought the Choice to the Kids</div>
-                            <div class="dev-blogsummary">
+                        <div class="dev-solulistcon">
+                            <div class="dev-solutitle">How red dot and Nickelodeon Brought the Choice to the Kids</div>
+                            <div class="dev-solusummary">
                                 Balenciaga has engaged Fantasy Interactive to provide a variety of digital services. We
                                 are delighted to acquire a client whom shares
                                 similar philosophies with our company.
                             </div>
-                            <div class="dev-blogoperate">
+                            <div class="dev-soluoperate">
                                 <span class="rili">1nd September 2014</span>
                                 <span class="talk">10</span>
                             </div>
                         </div>
                     </div>
-                    <div class="dev-bloglist">
-                        <div class="dev-blogimg">
-                            <div class="dev-blogimgcon"><img src="images/blog1.png"/></div>
+                    <div class="dev-solulist">
+                        <div class="dev-soluimg">
+                            <div class="dev-soluimgcon"><img src="images/blog1.png" /></div>
                         </div>
-                        <div class="dev-bloglistcon">
-                            <div class="dev-blogtitle">Balenciaga selects Fantasy Interactive as creative digital
+                        <div class="dev-solulistcon">
+                            <div class="dev-solutitle">
+                                Balenciaga selects Fantasy Interactive as creative digital
                                 partner
                             </div>
-                            <div class="dev-blogsummary">
+                            <div class="dev-solusummary">
                                 Balenciaga has engaged Fantasy Interactive to provide a variety of digital services. We
                                 are delighted to acquire a client whom shares
                                 similar philosophies with our company.
                             </div>
-                            <div class="dev-blogoperate">
+                            <div class="dev-soluoperate">
                                 <span class="rili">1nd September 2014</span>
                                 <span class="talk">10</span>
                             </div>
                         </div>
                     </div>
-                    <div class="dev-bloglist">
-                        <div class="dev-blogimg">
-                            <div class="dev-blogimgcon"><img src="images/blog2.png"/></div>
+                    <div class="dev-solulist">
+                        <div class="dev-soluimg">
+                            <div class="dev-soluimgcon"><img src="images/blog2.png" /></div>
                         </div>
-                        <div class="dev-bloglistcon">
-                            <div class="dev-blogtitle">Fantasy behind the new Si.com</div>
-                            <div class="dev-blogsummary">
+                        <div class="dev-solulistcon">
+                            <div class="dev-solutitle">Fantasy behind the new Si.com</div>
+                            <div class="dev-solusummary">
                                 Balenciaga has engaged Fantasy Interactive to provide a variety of digital services. We
                                 are delighted to acquire a client whom shares
                                 similar philosophies with our company.
                             </div>
-                            <div class="dev-blogoperate">
+                            <div class="dev-soluoperate">
                                 <span class="rili">1nd September 2014</span>
                                 <span class="talk">10</span>
                             </div>
                         </div>
                     </div>
-                    <div class="dev-bloglist">
-                        <div class="dev-blogimg">
-                            <div class="dev-blogimgcon"><img src="images/blog3.png"/></div>
+                    <div class="dev-solulist">
+                        <div class="dev-soluimg">
+                            <div class="dev-soluimgcon"><img src="images/blog3.png" /></div>
                         </div>
-                        <div class="dev-bloglistcon">
-                            <div class="dev-blogtitle">How red dot and Nickelodeon Brought the Choice to the Kids</div>
-                            <div class="dev-blogsummary">
+                        <div class="dev-solulistcon">
+                            <div class="dev-solutitle">How red dot and Nickelodeon Brought the Choice to the Kids</div>
+                            <div class="dev-solusummary">
                                 Balenciaga has engaged Fantasy Interactive to provide a variety of digital services. We
                                 are delighted to acquire a client whom shares
                                 similar philosophies with our company.
                             </div>
-                            <div class="dev-blogoperate">
+                            <div class="dev-soluoperate">
                                 <span class="rili">1nd September 2014</span>
                                 <span class="talk">10</span>
                             </div>
@@ -241,8 +243,8 @@
         </div>
     </div>
 </div>
-<div class="floor dev-blog">
-    <div class="dev-blogcon-out">
+<div class="floor dev-solu">
+    <div class="dev-solucon-out">
         <div class="dev-bigtitle">Blog</div>
     </div>
 </div>
